--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,18 +8,21 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hello!
-    I'm Hyunjin Choi, a master's student at the Human-Centered Intelligent Systems (HCIS) Lab at Gwangju Institute of Science and Technology (GIST).
-    My research Interests are HCI(Human-Computer Interaction), particularly in the area of multisensory feedback, AI-driven Interaction, Embodiment, Haptics, and XR.
+    Hello!  
+    I'm Hyunjin Choi, a master's student at the Human-Centered Intelligent Systems (HCIS) Lab at *Gwangju Institute of Science and Technology (GIST)*.  
+      
+    My research Interests are HCI(Human-Computer Interaction), particularly in the area of **multisensory feedback, AI-driven Interaction, Embodiment, Haptics, and XR**.  
     I aim to explore how these technologies can support more intuitive and expressive user experiences.
+      
+    You can reach me at [hyunjinchoi@gm.gist.ac.kr](mailto:hyunjinchoi@gm.gist.ac.kr), or view my [CV here](/assets/cv.pdf) for more details.
 
   # This photo will be used in the about section
   picture:
-    path:            assets/img/me.jpg
+    path:            /assets/img/me.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
+    # srcset:
+    #   1x:            https://via.placeholder.com/128x128
+    #   2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
@@ -27,9 +30,10 @@ author1:
   # You can also provide an absolute URL (starting with https://) instead of usernames
   social:
     # twitter:         <username>
-    github:          <hyunjin-C>
-    email:           <hyunjinchoi@gm.gist.ac.kr>
-    linkedin:        <hyunjinchoi>
+    github:          hyunjin-C
+    email:           hyunjinchoi@gm.gist.ac.kr
+    linkedin:        hyunjinchoi
+    googlescholar:   http://scholar.google.com/citations?user=9idZqp4AAAAJ&hl=ko&authuser=2
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
